Scrollbar and canvasing fixes

--- a/login.css
+++ b/login.css
@@ -45,6 +45,13 @@
     font-family: "Poppins", sans-serif;
 }
 
+#backgroundCanvas {
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: -1;
+}
+
 body {
     display: flex;
     background: #36393e;
@@ -90,33 +97,8 @@ body {
     animation: water 4s ease-in-out infinite;
   }
 
-/* @keyframes water {
-    0% {
-        clip-path: polygon(0% 48%, 5% 45%, 17% 41%, 27% 41%, 37% 43%, 46% 49%, 56% 58%, 66% 63%, 77% 63%, 87% 62%, 95% 60%, 100% 57%, 100% 100%, 0% 100%);
-    }
-    50% {
-        clip-path: polygon(0% 54%, 8% 59%, 20% 63%, 29% 64%, 38% 65%, 44% 63%, 52% 61%, 59% 57%, 68% 52%, 77% 48%, 87% 48%, 97% 53%, 100% 59%, 100% 100%, 0% 100%);
-    }
-    100% {
-        clip-path: polygon(0% 48%, 5% 45%, 17% 41%, 27% 41%, 37% 43%, 46% 49%, 56% 58%, 66% 63%, 77% 63%, 87% 62%, 95% 60%, 100% 57%, 100% 100%, 0% 100%);
-    }
-} */
 
-/* @keyframes water {
-    0%, 100% {
-        clip-path: polygon(50% 0%, 0% 100%, 100% 100%);
-    }
-    25% {
-        clip-path: polygon(40% 0%, 40% 20%, 100% 20%, 100% 80%, 40% 80%, 40% 100%, 0% 50%);
-    }
-    50% {
-        clip-path: polygon(50% 0%, 0% 100%, 100% 100%);
-    }
-    75% {
-        clip-path: polygon(60% 0%, 60% 20%, 100% 20%, 100% 80%, 60% 80%, 60% 100%, 0% 50%);
-    }
-} */
-
+/* stolen from some youtube video */
 @keyframes water {
     0%,
     100% {
@@ -147,67 +129,11 @@ body {
     }
   }
 
-/* @keyframes water {
-    0% {
-        clip-path: polygon(0% 48%, 5% 45%, 17% 41%, 27% 41%, 37% 43%, 46% 49%, 56% 58%, 66% 63%, 77% 63%, 87% 62%, 95% 60%, 100% 57%, 100% 100%, 0% 100%);
-    }
-    50% {
-        clip-path: polygon(0% 54%, 8% 59%, 20% 63%, 29% 64%, 38% 65%, 44% 63%, 52% 61%, 59% 57%, 68% 52%, 77% 48%, 87% 48%, 97% 53%, 100% 59%, 100% 100%, 0% 100%);
-
-    }
-    100% {
-        clip-path: polygon(0% 54%, 8% 59%, 20% 63%, 29% 64%, 38% 65%, 44% 63%, 52% 61%, 59% 57%, 68% 52%, 77% 48%, 87% 48%, 97% 53%, 100% 59%, 100% 100%, 0% 100%);
-
-    }
-} */
-
-/* @keyframes water {
-    0% {
-        clip-path: polygon(0% 48%, 5% 45%, 17% 41%, 27% 41%, 37% 43%, 46% 49%, 56% 58%, 66% 63%, 77% 63%, 87% 62%, 95% 60%, 100% 57%, 100% 100%, 0% 100%);
-    }
-    10% {
-        clip-path: polygon(0% 51%, 7% 48%, 18% 44%, 28% 43%, 36% 45%, 43% 48%, 50% 52%, 58% 56%, 66% 59%, 75% 59%, 84% 58%, 92% 56%, 100% 53%, 100% 100%, 0% 100%);
-    }
-    20% {
-        clip-path: polygon(0% 54%, 8% 51%, 18% 47%, 27% 46%, 35% 48%, 42% 51%, 49% 54%, 57% 58%, 64% 60%, 72% 61%, 80% 60%, 88% 58%, 96% 55%, 100% 52%, 100% 100%, 0% 100%);
-    }
-    30% {
-        clip-path: polygon(0% 57%, 9% 54%, 18% 50%, 26% 49%, 34% 51%, 42% 54%, 49% 57%, 57% 61%, 63% 63%, 71% 64%, 79% 63%, 87% 61%, 94% 58%, 100% 55%, 100% 100%, 0% 100%);
-    }
-    40% {
-        clip-path: polygon(0% 60%, 10% 56%, 18% 53%, 25% 52%, 32% 54%, 40% 57%, 47% 61%, 54% 64%, 60% 66%, 67% 67%, 74% 66%, 81% 64%, 88% 61%, 95% 57%, 100% 54%, 100% 100%, 0% 100%);
-    }
-    50% {
-        clip-path: polygon(0% 63%, 11% 59%, 18% 56%, 24% 54%, 31% 56%, 38% 59%, 45% 63%, 52% 67%, 58% 69%, 64% 71%, 71% 70%, 78% 68%, 85% 65%, 92% 61%, 100% 58%, 100% 100%, 0% 100%);
-    }
-    60% {
-        clip-path: polygon(0% 66%, 12% 62%, 18% 59%, 23% 57%, 29% 59%, 35% 62%, 42% 66%, 48% 70%, 54% 73%, 59% 75%, 66% 74%, 73% 72%, 80% 69%, 87% 65%, 94% 62%, 100% 59%, 100% 100%, 0% 100%);
-    }
-    70% {
-        clip-path: polygon(0% 69%, 13% 65%, 18% 63%, 22% 60%, 28% 63%, 33% 66%, 40% 70%, 46% 74%, 52% 78%, 57% 80%, 64% 78%, 71% 76%, 78% 73%, 85% 70%, 92% 66%, 100% 63%, 100% 100%, 0% 100%);
-    }
-    80% {
-        clip-path: polygon(0% 72%, 14% 68%, 18% 66%, 21% 64%, 27% 67%, 31% 70%, 38% 74%, 44% 78%, 50% 82%, 55% 85%, 62% 83%, 69% 81%, 76% 78%, 83% 75%, 90% 71%, 100% 68%, 100% 100%, 0% 100%);
-    }
-    90% {
-        clip-path: polygon(0% 75%, 15% 71%, 18% 69%, 20% 67%, 26% 70%, 29% 74%, 36% 78%, 42% 82%, 48% 86%, 53% 89%, 60% 87%, 67% 85%, 74% 82%, 81% 79%, 88% 75%, 95% 71%, 100% 68%, 100% 100%, 0% 100%);
-    }
-} */
-
-
-/* .login-title {
-    position: absolute;
-    color: #fff;
-    transform: translate(-50%, -50%);
-
-} */
-
 .wrapper {
     width: 420px;
     background: transparent;
     border: 2px solid rgba(255, 255, 255, .2);
     backdrop-filter: blur(15px);
-    /* backdrop-filter: blur(100px); */
     box-shadow: 0 0 10px rgba(0, 0, 0, .2);
     color: #fff;
     border-radius: 10px;
@@ -244,7 +170,6 @@ body {
 }
 
 .error-message-display {
-    /* opacity: 1; */
     visibility: visible;
     animation: errorFade 3s ease-in-out;
 }
@@ -421,7 +346,12 @@ input:hover {
 }
 
 ::-webkit-scrollbar-thumb {
-    background-color: #888;
+    background-color: rgba( 114, 137, 218, 1);
+    border-radius: 6px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background-color: rgb(145, 167, 247);
     border-radius: 6px;
 }
 
